--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,8 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="96dp"
         android:text="GuessingGame"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:visibility="visible" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
         android:id="@+id/Number"
@@ -28,11 +27,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="69dp"
         android:layout_marginLeft="69dp"
-        android:layout_marginTop="133dp"
-        android:text="Enter a number between 1 and 100"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:visibility="visible"
-        tools:visibility="visible" />
+        android:layout_marginTop="135dp"
+        android:gravity="center"
+        android:text="Guess a number between 1 and 100"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <EditText
         android:id="@+id/txtGuess"
@@ -40,10 +40,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="157dp"
+        android:layout_marginTop="166dp"
         android:width="75dp"
         android:ems="10"
-        android:inputType="number" />
+        android:gravity="center_horizontal"
+        android:inputType="number"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/btnGuess"
