--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,14 +21,10 @@
         android:id="@+id/Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="69dp"
-        android:layout_marginLeft="69dp"
-        android:layout_marginTop="135dp"
-        android:gravity="center"
+        android:layout_marginTop="138dp"
+        android:gravity="center|center_horizontal|center_vertical"
         android:text="Guess a number between 1 and 100"
         android:textAlignment="center"
         android:textAllCaps="false"
