--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,16 @@
     android:id="@+id/Guess"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:layout_alignWithParentIfMissing="false"
+    android:layout_alignParentLeft="false"
+    android:layout_alignParentTop="false"
+    android:layout_alignParentRight="false"
+    android:layout_alignParentBottom="false"
+    android:background="#17190322"
+    android:gravity="start|center_horizontal|end"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_alignParentStart="false"
+    android:layout_alignParentEnd="false">
 
     <TextView
         android:id="@+id/GuessingGame"
@@ -13,53 +22,84 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/alfa_slab_one"
         android:text="GuessingGame"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="34sp" />
 
     <TextView
         android:id="@+id/Number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="138dp"
-        android:gravity="center|center_horizontal|center_vertical"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="103dp"
+        android:layout_marginEnd="64dp"
+        android:fontFamily="@font/anton"
+        android:gravity="center|start|center_horizontal|center_vertical|end"
         android:text="Guess a number between 1 and 100"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/txtGuess"
-        android:layout_width="wrap_content"
+        android:layout_width="105dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="166dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="148dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:width="75dp"
+        android:alpha=".5"
+        android:drawableBottom="@android:drawable/divider_horizontal_dark"
         android:ems="10"
         android:gravity="center_horizontal"
         android:inputType="number"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="48sp" />
+
+    <TextView
+        android:id="@+id/lblOutput"
+        android:layout_width="375dp"
+        android:layout_height="42dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="342dp"
+        android:fontFamily="@font/anton"
+        android:text="Enter a number, then click Guess"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <Button
         android:id="@+id/btnGuess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="false"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="206dp"
-        android:text="Guess!" />
-
-    <TextView
-        android:id="@+id/lblOutput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="267dp"
-        android:text="Enter a number, then click Guess"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:layout_centerVertical="false"
+        android:layout_gravity="center|start|end"
+        android:layout_marginStart="138dp"
+        android:layout_marginLeft="138dp"
+        android:layout_marginBottom="386dp"
+        android:fontFamily="@font/anton"
+        android:text="@string/guess"
+        android:textAlignment="center"
+        android:textSize="34sp" />
 
 </RelativeLayout>
