--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -24,12 +24,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/alfa_slab_one"
-        android:text="GuessingGame"
+        android:text="@string/guessinggame"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="34sp" />
 
     <TextView
-        android:id="@+id/Number"
+        android:id="@+id/TextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -43,11 +43,12 @@
         android:layout_marginEnd="64dp"
         android:fontFamily="@font/anton"
         android:gravity="center|start|center_horizontal|center_vertical|end"
-        android:text="Guess a number between 1 and 100"
+        android:text="@string/range"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:layout_alignParentRight="true" />
 
     <EditText
         android:id="@+id/txtGuess"
